# ai-hedge-fund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  features.md  integrations.md  plan.md  pyproject.toml  quick_test.py  requirements.txt  telegram_bot.py  web_app.py
docs/: dependency.md  ux.md
scripts/: install.bat  install.py  install.sh
src/: .env.template  __init__.py  advanced_tools.py  agents.py  backtester.py  base_agent.py  llm_config.py  logging_config.py  message_bus.py  server.py  tools.py  trading_system.py  user_profile.py
src/static/: index.html
src/static/css/: styles.css
src/static/js/: app.js
